--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "BIM 360 Model Coordination API Sample - PDF Exporter of Clash",
   "description": "This repository demonstrates advanced viewing of clash raw data by Model Coordination API and demos exporting a PDF report on the clashes the user is interested in.",
-  "repository": "https://github.com/xiaodongliang/bim360-mcapi-node-pdf.exporter.sample",
+  "repository": "https://github.com/autodesk-forge/forge-bim360-clashpdfexport",
   "logo": "https://avatars0.githubusercontent.com/u/8017462?v=3&s=200",
   "keywords": [
     "express",
@@ -21,7 +21,7 @@
     },
     "FORGE_CALLBACK_URL": {
       "description": "Callback URL of your Forge app, required for 3-legged OAuth",
-      "value": "https://<<YOUR HEROKU APP NAME HERE>>.herokuapp.com/oauth/callback"
+      "value": "https://<<YOUR HEROKU APP NAME HERE>>.herokuapp.com/api/forge/callback/oauth"
     }
   },
   "website": "",
